objects/Alpha_Prefix_Request__c.object
<CustomObject>
    <fields>
        <fullName>AccountLegalName__c</fullName>
        <formula>Group__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountLegalNameForWF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRecordTypeAlphaNum__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountRecordTypeAlphaNum</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Account__r.Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Approving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is only required if the Profile Run-Out Period is not the standard 24 months.</inlineHelpText>
        <label>Account Executive Approving</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alpha_Prefix_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of the Sales Contact associated with this request.</inlineHelpText>
        <label>Account Executive Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alpha_Prefix_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(Account__r.Id, Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <inlineHelpText>Is the account national, local or a Joint Administrative Arrangement (JAA)?</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                    <default>true</default>
                    <label>National</label>
                </value>
                <value>
                    <fullName>JAA</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>National JAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Account associated with this request.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alphanumeric Prefix Requests</relationshipLabel>
        <relationshipName>Alpha_Prefix_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anthem_Entity__c</fullName>
        <formula>TEXT( Group__r.Account__r.Anthem_Entity__c )</formula>
        <label>Anthem Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPD_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BPD ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Behavioral_Health_Pre_Cert_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For BCBSA Call Routing from 800-676-BLUE, when providers call to determine pre-certification, 
can be the same telephone number used for customer service routing.</inlineHelpText>
        <label>Behavioral Health Pre-Cert Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CIP_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field will be pre-populated if launched from an Implementation Case. It should be blank if launched from an Account.</inlineHelpText>
        <label>Implementation Case Reference</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Alphanumeric Prefix Requests</relationshipLabel>
        <relationshipName>Alphanumeric_Prefix_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentsTerminations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments Terminations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter any additional comments concerning the above section here.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Control_Plan_Code_System__c</fullName>
        <inlineHelpText>Select the according Control Plan Code. If not included in the picklist choose &apos;Other&apos; and elaborate in the comments section below.</inlineHelpText>
        <label>Control Plan Code / System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA - CAREMORE FACETS- 041</fullName>
                </value>
                <value>
                    <fullName>CA - GBD FACETS- 044</fullName>
                </value>
                <value>
                    <fullName>CA - NASCO- 042</fullName>
                </value>
                <value>
                    <fullName>CA - NASCO - 046</fullName>
                </value>
                <value>
                    <fullName>CA - WGS- 040</fullName>
                </value>
                <value>
                    <fullName>CO - CAREMORE FACETS- 552</fullName>
                </value>
                <value>
                    <fullName>CO - GBD FACETS- 052</fullName>
                </value>
                <value>
                    <fullName>CO - NASCO- 053</fullName>
                </value>
                <value>
                    <fullName>CO - WGS- 051</fullName>
                </value>
                <value>
                    <fullName>CT - ACES- 060</fullName>
                </value>
                <value>
                    <fullName>CT - CAREMORE FACETS- 563</fullName>
                </value>
                <value>
                    <fullName>CT - CS90- 060</fullName>
                </value>
                <value>
                    <fullName>CT - GBD FACETS- 063</fullName>
                </value>
                <value>
                    <fullName>CT - MPL- 064</fullName>
                </value>
                <value>
                    <fullName>CT - NASCO- 064</fullName>
                </value>
                <value>
                    <fullName>CT - WGS- 062</fullName>
                </value>
                <value>
                    <fullName>GA - CAREMORE FACETS- 603</fullName>
                </value>
                <value>
                    <fullName>GA - GBD FACETS- 103</fullName>
                </value>
                <value>
                    <fullName>GA - NASCO- 104</fullName>
                </value>
                <value>
                    <fullName>GA - WGS- 102</fullName>
                </value>
                <value>
                    <fullName>IN - CAREMORE FACETS- 632</fullName>
                </value>
                <value>
                    <fullName>IN - GBD FACETS- 132</fullName>
                </value>
                <value>
                    <fullName>IN - WGS- 131</fullName>
                </value>
                <value>
                    <fullName>IN/KY/ OH - NASCO- 834</fullName>
                </value>
                <value>
                    <fullName>KY - CAREMORE FACETS- 662</fullName>
                </value>
                <value>
                    <fullName>KY - GBD FACETS- 162</fullName>
                </value>
                <value>
                    <fullName>KY - WGS- 161</fullName>
                </value>
                <value>
                    <fullName>ME - ACES- 180</fullName>
                </value>
                <value>
                    <fullName>ME - CAREMORE FACETS- 685</fullName>
                </value>
                <value>
                    <fullName>ME - GBD FACETS- 185</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_HQ_State__c</fullName>
        <formula>TEXT( Account__r.HQ_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_HQ_Street_Address__c</fullName>
        <formula>Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The address field will autopopulate once the associated account is selected.</inlineHelpText>
        <label>Corporate HQ Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DME_Pre_Cert_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For BCBSA Call Routing from 800-676-BLUE, when providers call to determine pre-certification, 
can be the same telephone number used for customer service routing.</inlineHelpText>
        <label>DME Pre-Cert Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date the request takes effect.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Impacted_Prefixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter existing Prefixes associated with this request.</inlineHelpText>
        <label>Existing Impacted Prefixes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Prefixes_Being_Terminated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Existing Prefixes Being Terminated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Future_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Future Carrier (If Known)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Core_Benefits__c</fullName>
        <label>Global Core Benefits(Medicare products)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number_Change_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number Change From</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Alphanumeric Prefix Requests</relationshipLabel>
        <relationshipName>Alphanumeric_Prefix_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Imaging_Radiology_Pre_Cert_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For BCBSA Call Routing from 800-676-BLUE, when providers call to determine pre-certification, 
can be the same telephone number used for customer service routing.</inlineHelpText>
        <label>Imaging/Radiology Pre-Cert Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Implementation_Coordinator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the name of the Implementation Coordinator associated with this request.</inlineHelpText>
        <label>Implementation Coordinator Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alpha_Prefix_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementations_Director_Approving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is only required if the Profile Run-Out Period is not the standard 24 months.</inlineHelpText>
        <label>Implementations Director Approving</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alpha_Prefix_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interplan_AM_Approving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add the correct InterPlan Account Manager. Requests submitted with non-InterPlan Account Managers will be automatically rejected.</inlineHelpText>
        <label>Interplan AM Approving</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alpha_Prefix_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOB_Institutional_Inpatient__c</fullName>
        <description>Line of Business - Institutional Inpatient</description>
        <inlineHelpText>Specify whether the Line of Business is Inpatient.</inlineHelpText>
        <label>LOB-Institutional Inpatient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_Professional__c</fullName>
        <description>Line of Business - Professional</description>
        <inlineHelpText>Specify whether the Line of Business is Professional.</inlineHelpText>
        <label>LOB-Professional</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_institutional_Outpatient__c</fullName>
        <description>Line of Business - Institutional Outpatient</description>
        <inlineHelpText>Specify whether the Line of Business is Outpatient.</inlineHelpText>
        <label>LOB-institutional Outpatient</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity_Contract_Situs_State1__c</fullName>
        <description>Picklist for Legal Entity/Contract Situs State.</description>
        <inlineHelpText>Selected According To The Situs State On Account. Contract Situs State Is The State Of The Insured&apos;s Residence And The State Of The Beneficiary.</inlineHelpText>
        <label>Legal Entity/Contract Situs State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>WI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legal_Entity_Contract_Situs_State__c</fullName>
        <formula>Text(Account__r.Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Selected according to the Situs State on Account.  Contract situs state is the state of the insured&apos;s residence and the state of the beneficiary.</inlineHelpText>
        <label>Legal Entity/Contract Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Policy_Branding__c</fullName>
        <label>Medical Policy Branding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem BC</fullName>
                </value>
                <value>
                    <fullName>Anthem BCBS</fullName>
                </value>
                <value>
                    <fullName>Anthem BCBS (VA)</fullName>
                </value>
                <value>
                    <fullName>BCBS of Georgia</fullName>
                </value>
                <value>
                    <fullName>Empire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_Policy_URL__c</fullName>
        <formula>IF( ISPICKVAL( Medical_Policy_Branding__c , &quot;Anthem BC&quot;) ,&quot;http://www.anthem.com/wps/portal/ca/footer?content_path=provider/f0/s0/t0/pw_b147308.htm&amp;label=Medical%20Policies%20and%20Clinical%20UM%20Guidelines&quot;,


IF( ISPICKVAL( Medical_Policy_Branding__c , &quot;Anthem BCBS&quot;) ,&quot;http://www.anthem.com/wps/portal/ahpfooter?content_path=medicalpolicies/noapplication/f5/s1/t0/pw_b147313.htm&amp;state=in&amp;rootLevel=0&amp;label=Anthem%20Medical%20Policies%20and%20Clinical%20UM%20Guidelines&quot;,

IF( ISPICKVAL( Medical_Policy_Branding__c , &quot;Anthem BCBS (VA)&quot;) ,&quot;http://www.anthem.com/wps/portal/ahpfooter?content_path=provider/va/f4/s3/t0/pw_b147309.htm&amp;state=va&amp;rootLevel=0&amp;label=Medical%20Coverage%20Guidelines%20&amp;%20Clinical%20UM%20Guidelines&quot;,


IF( ISPICKVAL( Medical_Policy_Branding__c , &quot;BCBS of Georgia&quot;) ,&quot;http://www.bcbsga.com/wps/portal/chpfooter?content_path=medicalpolicies/noapplication/f0/s0/t0/pw_b147311.htm&amp;label=Medical%20Policies%20and%20Clinical%20UM%20Guidelines&quot;,


IF( ISPICKVAL( Medical_Policy_Branding__c , &quot;Empire&quot;),&quot;http://www.empireblue.com/wps/portal/ehpfooter?content_path=medicalpolicies/noapplication/f0/s0/t0/pw_b147312.htm&amp;label=Medical%20Policies%20and%20Clinical%20UM%20Guidelines&quot;, &quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Medical Policy URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Surgical_Pre_Cert_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For BCBSA Call Routing from 800-676-BLUE, when providers call to determine pre-certification, 
can be the same telephone number used for customer service routing.</inlineHelpText>
        <label>Medical &amp; Surgical Pre-Cert Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Migrating_Business_To__c</fullName>
        <label>Migrating Business To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACES</fullName>
                </value>
                <value>
                    <fullName>AMISYS</fullName>
                </value>
                <value>
                    <fullName>CHIPS</fullName>
                </value>
                <value>
                    <fullName>CS90</fullName>
                </value>
                <value>
                    <fullName>FACETS</fullName>
                </value>
                <value>
                    <fullName>NASCO</fullName>
                </value>
                <value>
                    <fullName>WGS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migrating_Business_from__c</fullName>
        <label>Migrating Business from</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACES</fullName>
                </value>
                <value>
                    <fullName>AMISYS</fullName>
                </value>
                <value>
                    <fullName>CHIPS</fullName>
                </value>
                <value>
                    <fullName>CS90</fullName>
                </value>
                <value>
                    <fullName>FACETS</fullName>
                </value>
                <value>
                    <fullName>NASCO</fullName>
                </value>
                <value>
                    <fullName>WGS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Pre_Cert_Pre_Auth_Branding__c</fullName>
        <label>National Pre-Cert / Pre-Auth Branding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anthem BC</fullName>
                </value>
                <value>
                    <fullName>Anthem BCBS</fullName>
                </value>
                <value>
                    <fullName>Anthem BCBS (VA)</fullName>
                </value>
                <value>
                    <fullName>BCBS of Georgia</fullName>
                </value>
                <value>
                    <fullName>Empire</fullName>
                </value>
                <value>
                    <fullName>Local Central Region (IN, OH, KY, MO, WI)</fullName>
                </value>
                <value>
                    <fullName>Local CA</fullName>
                </value>
                <value>
                    <fullName>Local CO</fullName>
                </value>
                <value>
                    <fullName>Local CT</fullName>
                </value>
                <value>
                    <fullName>Local GA</fullName>
                </value>
                <value>
                    <fullName>Local ME</fullName>
                </value>
                <value>
                    <fullName>Local NV</fullName>
                </value>
                <value>
                    <fullName>Local NH</fullName>
                </value>
                <value>
                    <fullName>Local NY</fullName>
                </value>
                <value>
                    <fullName>Local VA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_NOT_Prefix_Confirmed__c</fullName>
        <label>Number NOT Prefix Confirmed</label>
        <summaryFilterItems>
            <field>Alpha_Prefix_Network__c.Incomplete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Alpha_Prefix_Network__c.Alpha_Prefix_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofMissingPrefixControlPlans__c</fullName>
        <formula>Number_NOT_Prefix_Confirmed__c + NumberofProductswoControlPlan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Missing Prefix &amp; Control Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofProductswoControlPlan__c</fullName>
        <label>Number of Products w/o Control Plan</label>
        <summaryForeignKey>Alpha_Prefix_Network__c.Alpha_Prefix_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Operations_Director_Approving__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is only required if the Profile Run-Out Period is not the standard 24 months.</inlineHelpText>
        <label>Operations Director Approving</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alpha_Prefix_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Out_of_Area_Non_Emergency_Benefits__c</fullName>
        <description>(No) Area Non-Emergency Benefits.</description>
        <inlineHelpText>Are the out-of-area benefits for this Account limited to Urgent/Emergency Care?</inlineHelpText>
        <label>Out of Area Non-Emergency Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <formula>CreatedBy.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Company_Name__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist_for_Legal_Entity_Contract_Situs__c</fullName>
        <description>Picklist for Legal Entity/Contract Situs State.</description>
        <inlineHelpText>Selected According To The Situs State On Account. Contract Situs State Is The State Of The Insured&apos;s Residence And The State Of The Beneficiary.</inlineHelpText>
        <label>Picklist for Legal Entity/Contract Situs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>WI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prefix_Account_ID__c</fullName>
        <formula>Account__r.Prefix_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prefix Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix_Cancel_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This Is The Last Day The Prefix Is Valid.</inlineHelpText>
        <label>Prefix Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prefixes_Being_Returned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefixes Being Returned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Private_Exchange_Account__c</fullName>
        <label>Private Exchange Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Private_Exchange_Name__c</fullName>
        <label>Private Exchange Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AON Hewitt Corporate Exchange</fullName>
                </value>
                <value>
                    <fullName>Mercer Marketplace Exchange</fullName>
                </value>
                <value>
                    <fullName>Towers Watson One Exchange</fullName>
                </value>
                <value>
                    <fullName>Buck Consulting RightOpt</fullName>
                </value>
                <value>
                    <fullName>Anthem Health Marketplace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prod_Network_Count__c</fullName>
        <label>Prod/Network Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_Run_Out_Period_Months__c</fullName>
        <defaultValue>24</defaultValue>
        <inlineHelpText>Director level approval is required if Run-Out period is not the default 24 months.</inlineHelpText>
        <label>Profile Run-Out Period (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_For_Return__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason For Return</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Termination__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requestor_Title__c</fullName>
        <formula>$User.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Provider_Svc_Routing_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For BCBSA Call Routing from 800-676-BLUE, when providers call to determine benefits and eligibility, 
can be the same telephone number used for customer service routing.</inlineHelpText>
        <label>Single Provider Svc Routing Phone #</label>
        <type>Phone</type>
    </fields>
</CustomObject>